compiler/testData/diagnostics/tests/subtyping/kt2744.kt
class X : <!UNRESOLVED_REFERENCE!>S<!>

fun f(<!UNUSED_PARAMETER!>l<!>: List<X>) {}
